force-app/main/default/objects/Break_Time__c/Break_Time__c.object-meta.xml
<CustomObject>
    <label>Break Time</label>
    <nameField>
        <label>Break Time Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Break Times</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>