force-app/main/default/objects/Break_Time__c/fields/Attendance__c.field-meta.xml
<CustomField>
    <fullName>Attendance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Attendance</label>
    <referenceTo>Attendance__c</referenceTo>
    <relationshipLabel>Break Times</relationshipLabel>
    <relationshipName>Break_Times</relationshipName>
    <type>Lookup</type>
</CustomField>