force-app/main/default/objects/Break_Time__c/fields/Break_End__c.field-meta.xml
<CustomField>
    <fullName>Break_End__c</fullName>
    <label>Break End</label>
    <type>DateTime</type>
</CustomField>