force-app/main/default/objects/Break_Time__c/fields/Break_Start__c.field-meta.xml
<CustomField>
    <fullName>Break_Start__c</fullName>
    <label>Break Start</label>
    <type>DateTime</type>
</CustomField>