force-app/main/default/objects/Break_Time__c/fields/Break_Status__c.field-meta.xml
<CustomField>
    <fullName>Break_Status__c</fullName>
    <label>Break Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Auto Ended</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>