force-app/main/default/objects/Break_Time__c/fields/Ended_By__c.field-meta.xml
<CustomField>
    <fullName>Ended_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ended By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>WorkdayBreaksEnded</relationshipName>
    <type>Lookup</type>
</CustomField>