force-app/main/default/objects/Break_Time__c/fields/Started_By__c.field-meta.xml
<CustomField>
    <fullName>Started_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Started By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>WorkdayBreaksStarted</relationshipName>
    <type>Lookup</type>
</CustomField>